--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,12 @@ git:
 notifications:
   email: false
 
-before_install:
-- bash -c "[ \"$COVERALLS_TOKEN\" != \"-\" ] && go install github.com/mattn/goveralls@v0.0.11"
-
-script:
-- "make lint"
-- "make test"
-- bash -c "[ \"$COVERALLS_TOKEN\" != \"-\" ] && $GOPATH/bin/goveralls -service=travis-ci -repotoken $COVERALLS_TOKEN"
+jobs:
+  include:
+    - stage: lint
+      script: make lint
+    - stage: test
+      script: make test
+    - before_install: go install github.com/mattn/goveralls@v0.0.11
+      script: $GOPATH/bin/goveralls -service=travis-ci -repotoken $COVERALLS_TOKEN
+      if: branch = main
