--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ jobs:
       script: make lint
     - stage: test
       script: make test
+    - stage: generate
+      script: make check.generate
     - before_install: go install github.com/mattn/goveralls@v0.0.11
       script: $GOPATH/bin/goveralls -service=travis-ci -repotoken $COVERALLS_TOKEN
       if: branch = main
