trigger on push and pull_request

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,11 +1,6 @@
 name: check-gherkingen
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    types: [opened, reopened]
+on: [push, pull_request]
 
 jobs:
   test:
